src/components/Nav/Nav.module.scss
@import '@styles/variables.scss', '@styles/mixins.scss';

.nav {
  @include unselectable;
  height: 10vh;
  width: 100vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 0 2vw;
  box-shadow: $box-shadow;
  background-color: $discord-darker;
  position: relative; // required for box shadow to be visible
  white-space: nowrap;

  @media screen and (max-width: 1028px) {
    height: 15vh;
  }
}

.secondaryNav {
  height: 6vh;
  width: 100vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  padding: 0 2vw;
  background-color: $discord-dark;
}

.logo {
  margin-top: 5px;
}

.navLinks a {
  @include primary-font;
  margin-left: 3vw;
  position: relative;
  text-decoration: none;

  &:hover {
    cursor: pointer;
    color: $csch-color-dark;
  }

  &:before {
    @include link-animation;
    background-color: $csch-color-dark;
  }

  &:hover:before {
    @include link-hover-animation;
  }
}

@media screen and (max-width: 768px) {
  .nav {
    padding: 0 5vw;
  }

  .hideOnTablet {
    display: none;
  }
}

@media screen and (max-width: 575px) {
  .hideOnMobile {
    display: none;
  }
}

@media screen and (max-width: 425px) {
  .hideOnSmallMobile {
    display: none;
  }
}

